<?xml version="1.0"?>
<package format="2">
  <name>pcl_fusion</name>
  <version>0.0.1</version>
  <description>The pcl_fusion package</description>

  <author email="btearle@ethz.ch">btearle</author>
  <maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>aslam_cv_cameras</build_depend>
  <build_depend>comm_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>aslam_cv_cameras</exec_depend>
  <exec_depend>comm_msgs</exec_depend>

</package>
